updated css and styling

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
       integrity="sha512-UyNhw5RNpQaCai2EdC+Js0QL4RlVmiq41DkmCJsRV3ZxipG2L0HhTqIf/H9Hp8ez2EnFlkBnjRGJU2stW3Lj+w=="
       crossorigin="anonymous"
     />
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <!-- <script src="https://unpkg.com/boxicons@2.1.2/dist/boxicons.js"></script> -->
     <title>Thinkful Pomodoro Timer</title>
   </head>
   <body>
